# springer-book-code

./: .gitignore  Dockerfile  LICENSE  README.md
code/: Makefile  Readme.md  dune  dune-project  springer-book-code.opam
code/chap02_maths/: dune  gamma_func.ml  integration.ml  interpolation.ml  special_func.ml
code/chap03_stats/: dune  gamma_pdf.ml  plots.ml
code/chap04_linear-algebra/: dune  imageUtils.ml  lena.ppm  svd.ml
code/chap06_diffequation/: dune  lorenz_01.ml  lorenz_02.ml  midpoints.ml
code/chap07_signal/: dialtone.ml  dune  goog.ml  imageUtils.ml  moonlanding.ml  moonlanding.ppm  sine.ml  sunspot.ml
code/chap08_algodiff/: dune  high_order.ml
code/chap09_optimisation/: dune  himm.ml  rosenbrock.ml
code/chap10_regression/: data_mul.csv  data_reg.csv  dune  gaussian_kernel.ml  mul_reg.ml  plot_reg.ml  poly_reg.ml  svm.ml
code/chap13_case-image-inception/: gists.md
docs/: _config.yml  index.md
